// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Basic renders correctly 1`] = `
<div>
  <div
    class="css-10sse88-boxStyles-Card"
  >
    <div
      class="css-1kl9gz-boxStyles"
    >
      <div
        class="css-cocx5d-boxStyles"
      >
        <h2
          class="css-71xldo-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-7njy8a-boxStyles-Text"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card With link renders correctly 1`] = `
<div>
  <div
    class="css-1q2c9xn-boxStyles-Card"
  >
    <div
      class="css-1kl9gz-boxStyles"
    >
      <div
        class="css-cocx5d-boxStyles"
      >
        <h2
          class="css-71xldo-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-7njy8a-boxStyles-Text"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
        <a
          class="css-190821o-CardLink"
          href="#"
        >
          Linking out
          <svg
            aria-hidden="true"
            class="css-9s3cfn-Icon"
            clip-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
